--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "file-saver": "latest",
     "lucide-react": "^0.454.0",
     "next": "15.5.3",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1"
